@@ -185,12 +185,6 @@ use lib "$FindBin::Bin/lib";
     my $success = $build->compile_spvm();
     ok($success == 0);
   }
-  {
-    my $build = SPVM::Builder->new;
-    $build->use('TestCase::CompileError::Isa::RightIsAnyObject');
-    my $success = $build->compile_spvm();
-    ok($success == 0);
-  }
 }
 
 {
