@@ -1,10 +1,0 @@
-package TestCase::CompileError::Isa::RightIsAnyObject {
-  use TestCase::Minimal;
-  
-  sub main : int () {
-    my $minimal = new TestCase::Minimal;
-    if ($minimal isa object) {
-      
-    }
-  }
-}
